<?xml version="1.0"?>
<package format="3">
  <name>example_monitored_node</name>
  <version>1.0.0</version>
  <description>Example ROS2 C++ node demonstrating ros2top integration</description>
  
  <maintainer email="maintainer@example.com">ROS2Top Maintainer</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann_json</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
